dynamically login and register

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -1,5 +1,5 @@
 {
-  "welcomeMessage": "CLMS - এ স্বাগতম",
+  "welcomeMessage": "LMS -অ্যাডমিন প্যানেলে স্বাগতম",
   "email": "ইমেইল",
   "password": "পাসওয়ার্ড",
   "remeberPassword": "পরবর্তী ব্যবহারের জন্য মনে রাখুন",
