--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,5 +1,5 @@
 {
-  "welcomeMessage": "Welcome to CLMS",
+  "welcomeMessage": "Welcome to LMS Admin Panel",
   "email": "E-mail",
   "password": "Password",
   "remeberPassword": "Remember Password",
