Adding options in sidebar

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -20,5 +20,6 @@
   "copyright": "কপিরাইট © ২০২৩",
   "clms": "সিএলএমএস",
   "allRightResereved": "সমস্ত অধিকার সংরক্ষিত |",
-  "privacyConditions": "গোপনীয়তা নীতি | শর্তাবলী "
+  "privacyConditions": "গোপনীয়তা নীতি | শর্তাবলী ",
+  "dashboardTitle" : "ড্যাশবোর্ড"
 }
