--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -4,6 +4,8 @@
   "password": "পাসওয়ার্ড",
   "remeberPassword": "পরবর্তী ব্যবহারের জন্য মনে রাখুন",
   "login": "লগইন",
+  "loginHere": "প্রবেশ করুন",
+  "registerHere": "নিবন্ধন করুন",
   "learningManagementSystem": "লার্নিং ম্যানেজমেন্ট সিস্টেম এল এম এস",
   "eLibrary": "ই-লাইব্রেরি",
   "teachersGuide": "টিচার্স গাইড",
