--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -6,6 +6,7 @@
   "login": "লগইন",
   "loginHere": "প্রবেশ করুন",
   "registerHere": "নিবন্ধন করুন",
+  "welcomeToLms": "HSEP লার্নিং ম্যানেজমেন্ট সিস্টেম - এ স্বাগতম",
   "learningManagementSystem": "লার্নিং ম্যানেজমেন্ট সিস্টেম এল এম এস",
   "eLibrary": "ই-লাইব্রেরি",
   "teachersGuide": "টিচার্স গাইড",
