--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -6,6 +6,7 @@
   "login": "Login",
   "loginHere": "Login",
   "registerHere": "Register",
+  "welcomeToLms": "Welcome to HSEP Learning Managemnet System",
   "learningManagementSystem": "Learning Managemnet System LMS",
   "eLibrary": "E-Library",
   "teachersGuide": "Teachers Guide",
