--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -32,5 +32,6 @@
   "batchSubmenu2" : "আমন্ত্রনপত্র পাঠান",
   "batchSubmenu3" : "প্রশিক্ষণার্থী সীমাবদ্ধতা সেট",
   "trainerList" : "প্রশিক্ষক তালিকা",
-  "leave" : "প্রস্থান"
+  "leave" : "প্রস্থান",
+  "register": "নিবন্ধন করুন"
 }
