menu items added, batch creation form , course list updated

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -24,16 +24,16 @@
   "clms": "সিএলএমএস",
   "allRightResereved": "সমস্ত অধিকার সংরক্ষিত |",
   "privacyConditions": "গোপনীয়তা নীতি | শর্তাবলী ",
-  "dashboardTitle" : "ড্যাশবোর্ড",
-  "curriculum" : "পাঠ্যক্রম",
-  "curriculumSubmenu1":"",
-  "batch" : "ব্যাচ",
-  "batchSubmenu1" : "ব্যাচ তৈরি করুন",
-  "batchSubmenu2" : "আমন্ত্রনপত্র পাঠান",
-  "batchSubmenu3" : "প্রশিক্ষণার্থী সীমাবদ্ধতা সেট",
-  "batchSubmenu4" : "ব্যাচ সংখ্যা",
-  "trainerList" : "প্রশিক্ষক তালিকা",
-  "leave" : "প্রস্থান",
+  "dashboardTitle": "ড্যাশবোর্ড",
+  "curriculum": "পাঠ্যক্রম",
+  "curriculumSubmenu1": "",
+  "batch": "ব্যাচ",
+  "batchSubmenu1": "ব্যাচ তৈরি করুন",
+  "batchSubmenu2": "আমন্ত্রনপত্র পাঠান",
+  "batchSubmenu3": "প্রশিক্ষণার্থী সীমাবদ্ধতা সেট",
+  "batchSubmenu4": "ব্যাচের তালিকা ",
+  "trainerList": "প্রশিক্ষক তালিকা",
+  "leave": "প্রস্থান",
   "register": "নিবন্ধন করুন",
   "serialNumber": "ক্রমিক সংখ্যা",
   "batchName": "ব্যাচের নাম",
@@ -45,8 +45,8 @@
   "status": "অবস্থা",
   "actionButton": "অ্যাকশন বাটন",
   "formativeAssessmentSystem": "ফর্মাটিভ এসেসমেন্ট সিটেম",
-  "userProfile" : "ব্যবহারকারী প্রোফাইল",
-  "fullName" : "পুরো নাম",
-  "role" : "ভূমিকা",
-  "bio" : "বায়ো"
+  "userProfile": "ব্যবহারকারী প্রোফাইল",
+  "fullName": "পুরো নাম",
+  "role": "ভূমিকা",
+  "bio": "বায়ো"
 }
