--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -31,7 +31,7 @@
   "batchSubmenu1": "Create Batch",
   "batchSubmenu2": "Send Invitation",
   "batchSubmenu3": "Set Student Limits",
-  "batchSubmenu4" : "Batch Number",
+  "batchSubmenu4" : "Batch List",
   "trainerList": "Trainer List",
   "leave": "Leave",
   "register": "Register",
