--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -57,5 +57,6 @@
   "adminUserList": "এডমিন ইউজার লিস্ট",
   "fullUserName": "ব্যবহারকারীর সম্পূর্ন নাম",
   "userName": "ইউজার নাম",
-  "userRoleName": "ইউজার রোল নেম"
+  "userRoleName": "ইউজার রোল নেম",
+  "createAdminUser": "ক্রিয়েট এডমিন ইউজার"
 }
