Added translation for the dashboard

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -59,5 +59,12 @@
   "userName": "ইউজার নাম",
   "userRoleName": "ইউজার রোল নেম",
   "createAdminUser": "ক্রিয়েট এডমিন ইউজার",
-  "roleList" : "রোল লিস্ট"
+  "roleList" : "রোল লিস্ট",
+  "currentBatch" : "চলমান ব্যাচ",
+  "trainer": "প্রশিক্ষক",
+  "enrolledTrainees": "নথিভুক্ত প্রশিক্ষণার্থী",
+  "summaryOfTraining": "উচ্চ মাধ্যমিক শিক্ষক প্রশিক্ষণ ইনস্টিটিউটের সারসংক্ষেপ",
+  "venDiagram": "উচ্চ মাধ্যমিক শিক্ষক প্রশিক্ষণ ইনস্টিটিউটের ভেন",
+  "barDiagram": "উচ্চ মাধ্যমিক শিক্ষক প্রশিক্ষণ ইনস্টিটিউটের বার চার্ট",
+  "pieChart" : "উচ্চ মাধ্যমিক শিক্ষক প্রশিক্ষণ ইনস্টিটিউটের পাই চার্ট"
 }
