--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -6,8 +6,8 @@
   "login": "Login",
   "loginHere": "Login",
   "registerHere": "Register",
-  "welcomeToLms": "Welcome to HSEP Learning Managemnet System",
-  "learningManagementSystem": "Learning Managemnet System LMS",
+  "welcomeToLms": "Welcome to HSEP Learning Management System",
+  "learningManagementSystem": "Learning Management System LMS",
   "eLibrary": "E-Library",
   "teachersGuide": "Teachers Guide",
   "formativeAssesmentSystem": "Formative AssesmentSystem",
