--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -64,7 +64,7 @@
   "trainer": "প্রশিক্ষক",
   "enrolledTrainees": "নথিভুক্ত প্রশিক্ষণার্থী",
   "summaryOfTraining": "উচ্চ মাধ্যমিক শিক্ষক প্রশিক্ষণ ইনস্টিটিউটের সারসংক্ষেপ",
-  "venDiagram": "উচ্চ মাধ্যমিক শিক্ষক প্রশিক্ষণ ইনস্টিটিউটের ভেন",
+  "venDiagram": "উচ্চ মাধ্যমিক শিক্ষক প্রশিক্ষণ ইনস্টিটিউটের ভেন ডায়াগ্রাম",
   "barDiagram": "উচ্চ মাধ্যমিক শিক্ষক প্রশিক্ষণ ইনস্টিটিউটের বার চার্ট",
   "pieChart" : "উচ্চ মাধ্যমিক শিক্ষক প্রশিক্ষণ ইনস্টিটিউটের পাই চার্ট",
   "createUser" : "ইউজার তৈরি করুন",
