--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -39,6 +39,11 @@
     "number80":"৮0",
     "number90":"৯0",
     "number100":"১০0",
-    "adminPanel": "অ্যাডমিন প্যানেল"
+    "adminPanel": "অ্যাডমিন প্যানেল",
+    "CLMS":"CLMS এ লগইন করুন",
+    "Elibrary":"ই-লাইব্রেরি এ লগইন করুন",
+    "guide":"টিচার্স গাইড এ লগইন করুন",
+    "formative":"ফরম্যাটিভ এসেসমেন্ট সিস্টেম এ লগইন করুন",
+    "social":"সোস্যাল লার্নিং প্লাটফর্ম এ লগইন করুন"
 }
 
