--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -3,7 +3,7 @@
   "email": "ইমেইল",
   "password": "পাসওয়ার্ড",
   "remeberPassword": "পরবর্তী ব্যবহারের জন্য মনে রাখুন",
-  "login": "লগইন",
+  "login": "প্রবেশ করুন",
   "loginHere": "প্রবেশ করুন",
   "registerHere": "নিবন্ধন করুন",
   "welcomeToLms": "HSEP লার্নিং ম্যানেজমেন্ট সিস্টেম - এ স্বাগতম",
