Added en bn for course list component

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -44,6 +44,16 @@
     "Elibrary":"ই-লাইব্রেরি এ লগইন করুন",
     "guide":"টিচার্স গাইড এ লগইন করুন",
     "formative":"ফরম্যাটিভ এসেসমেন্ট সিস্টেম এ লগইন করুন",
-    "social":"সোস্যাল লার্নিং প্লাটফর্ম এ লগইন করুন"
+    "social":"সোস্যাল লার্নিং প্লাটফর্ম এ লগইন করুন",
+    "curriculumList":"কোর্সের  তালিকা",
+    "searchList":"অনুসন্ধান করুন",
+    "filterList":"ফিল্টার করুন",
+    "addCurriculum":"কোর্স যোগ করুন",
+    "pageSize":"পেইজ সাইজ",
+    "id":"আইডি",
+    "code":"কোড",
+    "name":"নাম",
+    "numberOfModule":"মডিউল নাম্বার",
+    "action":"অ্যাকশন"
 }
 
