--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -85,6 +85,8 @@
   "remarks": "মন্তব্য",
   "featureImgLimit" : "ফিচার ইমেজ: 300X500 এবং 200KB এর কম, ফাইল আপলোড সাইজ",
   "iconLimit": "আইকন ইমেজ 300 X 300 এবং 100KB এর কম হতে পারে৷",
-  "supDocLimit" : "5 MB এর কম"
+  "supDocLimit" : "5 MB এর কম",
+  "updateCourse": "পাঠ্যক্রম আপডেট করুন",
+  "update": " আপডেট করুন"
  
 }
