--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -88,6 +88,7 @@
   "iconLimit": "Icon image can be 300 X 300 and less than 100KB",
   "supDocLimit" : "less than 5 MB",
   "updateCourse": "Update Course",
-  "update": "Update"
+  "update": "Update",
+  "profileImageLimit": "Maximum size 100KB"
  
 }
