Added bn and en

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -54,6 +54,7 @@
     "code":"কোড",
     "name":"নাম",
     "numberOfModule":"মডিউল নাম্বার",
-    "action":"অ্যাকশন"
+    "action":"অ্যাকশন",
+    "userCreation":"ক্রিয়েট ইউজার"
 }
 
