--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -50,7 +50,7 @@
   "role": "ভূমিকা",
   "bio": "বায়ো",
   "createCourse": "পাঠ্যক্রম তৈরি করুন",
-  "courseList": "কোর্স তালিকা ",
+  "courseList": "পাঠ্যক্রমের তালিকা",
   "addTrainer" : "ট্রেইনার যোগ করুন",
   "setTrainerLimit" : "ট্রেইনার লিমিট",
   "settings": "সেটিংস",
