--- a/src/locale/english.json
+++ b/src/locale/english.json
@@ -54,7 +54,8 @@
     "code":"Code",
     "name":"Name",
     "numberOfModule":"Number of Modules",
-    "action":"Action"
+    "action":"Action",
+    "userCreation":"Create User"
 
     
 }
