login page design updated

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,6 +1,6 @@
 {
   "welcomeMessage": "Welcome to LMS Admin Panel",
-  "welcomeTo" : "Welcome to",
+  "welcomeTo": "Welcome to",
   "email": "E-mail",
   "password": "Password",
   "remeberPassword": "Remember Password",
@@ -9,10 +9,15 @@
   "registerHere": "Register",
   "welcomeToLms": "Welcome to HSEP Learning Management System",
   "learningManagementSystem": "Learning Management System LMS",
+  "learningManagementSystemLoginTitle": "Login to Learning Management System LMS",
   "eLibrary": "E-Library",
+  "eLibraryLoginTitle": "Login to E-Library",
   "teachersGuide": "Teachers Guide",
-  "formativeAssesmentSystem": "Formative AssesmentSystem",
+  "teachersGuideLoginTitle": "Login to Teachers Guide",
+  "formativeAssesmentSystem": "Formative Assesment System",
+  "formativeAssessmentSystemLoginTitle": "Login to Formative Assesment System",
   "socialLearningPlatform": "Social Learning Platform",
+  "socialLearningPlatformLoginTitle": "Login to Social Learning Platform",
   "howCanIHelpYou": "How can we help you? See our",
   "forMoreHelp": "See or Contact us for further assistance at",
   "fastStartGuide": "Fast Start Guide",
@@ -32,7 +37,7 @@
   "batchSubmenu1": "Create Batch",
   "batchSubmenu2": "Send Invitation",
   "batchSubmenu3": "Set Student Limits",
-  "batchSubmenu4" : "Batch List",
+  "batchSubmenu4": "Batch List",
   "trainerList": "Trainer List",
   "leave": "Leave",
   "register": "Register",
@@ -46,49 +51,48 @@
   "status": "Status",
   "actionButton": "Action Button",
   "formativeAssessmentSystem": "Formative Assesment System",
-  "userProfile" : "User Profile",
-  "fullName" : "Full Name",
-  "role" : "Role",
-  "bio" : "Bio",
+  "userProfile": "User Profile",
+  "fullName": "Full Name",
+  "role": "Role",
+  "bio": "Bio",
   "createCourse": "Create Course",
-  "courseList" : "Course List",
-  "addTrainer" : "Add Trainer",
-  "setTrainerLimit":"Trainer Limit",
+  "courseList": "Course List",
+  "addTrainer": "Add Trainer",
+  "setTrainerLimit": "Trainer Limit",
   "settings": "Settings",
   "adminUserList": "Admin User List",
   "fullUserName": "Full Name Of User",
   "userName": "User Name",
   "userRoleName": "User Role Name",
   "createAdminUser": "Create Admin User",
-  "roleList" : "Role List",
-  "currentBatch" : "Current Batch",
+  "roleList": "Role List",
+  "currentBatch": "Current Batch",
   "trainer": "Trainer",
   "enrolledTrainees": "Enrolled Trainees",
   "summaryOfTraining": "Summary of Higher Secondary Teacher Training Institute",
   "venDiagram": "Venn Diagram of Higher Secondary Teacher Training Institute",
   "barDiagram": "Bar Chart of Higher Secondary Teacher Training Institute",
-  "pieChart" : "Pie Chart of Higher Secondary Teacher Training Institute",
-  "createUser" : "Create User",
-  "designation" : "Designation",
-  "mobileNo" : "Mobile No",
+  "pieChart": "Pie Chart of Higher Secondary Teacher Training Institute",
+  "createUser": "Create User",
+  "designation": "Designation",
+  "mobileNo": "Mobile No",
   "uploadImage": "Upload Image",
-  "submit" : "submit",
-  "editUser" : "Edit User",
-  "SelectThis" : "Please Select",
-  "forgotPassword":"Forgot Password?",
+  "submit": "submit",
+  "editUser": "Edit User",
+  "SelectThis": "Please Select",
+  "forgotPassword": "Forgot Password?",
   "courseName": "Course Name",
   "adminPanel": "Admin Panel",
   "addCourseSettings": "Add Course Settings",
   "courseCode": "Course Code",
   "featureImage": "Feature Image",
-  "icon":"Icon",
+  "icon": "Icon",
   "supportingDoc": "Supporting Documents",
   "remarks": "Remarks",
-  "featureImgLimit" : "Feature image: 300X500 and less than 200KB, File upload size",
+  "featureImgLimit": "Feature image: 300X500 and less than 200KB, File upload size",
   "iconLimit": "Icon image can be 300 X 300 and less than 100KB",
-  "supDocLimit" : "less than 5 MB",
+  "supDocLimit": "less than 5 MB",
   "updateCourse": "Update Course",
   "update": "Update",
   "profileImageLimit": "Maximum size 100KB"
- 
 }
