login page fix bn en render issue

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -8,15 +8,15 @@
   "registerHere": "নিবন্ধন করুন",
   "welcomeToLms": "HSEP লার্নিং ম্যানেজমেন্ট সিস্টেম - এ স্বাগতম",
   "learningManagementSystem": "লার্নিং ম্যানেজমেন্ট সিস্টেম এল এম এস",
-  "learningManagementSystemLoginTitle": " প্রবেশ করুন লার্নিং ম্যানেজমেন্ট সিস্টেম এল এম এস",
+  "learningManagementSystemLoginTitle": " লার্নিং ম্যানেজমেন্ট সিস্টেমে লগইন করুন",
   "eLibrary": "ই-লাইব্রেরি",
-  "eLibraryLoginTitle": "প্রবেশ করুন ই-লাইব্রেরি",
+  "eLibraryLoginTitle": "ই - লাইব্রেরি তে লগইন করুন",
   "teachersGuide": "টিচার্স গাইড",
-  "teachersGuideLoginTitle": "প্রবেশ করুন টিচার্স গাইড",
+  "teachersGuideLoginTitle": "টিচারস গাইড এ লগইন করুন",
   "formativeAssesmentSystem": "ফরম্যাটিভ এসেসমেন্ট সিস্টেম",
-  "formativeAssessmentSystemLoginTitle": "প্রবেশ করুন ফরম্যাটিভ এসেসমেন্ট সিস্টেম",
+  "formativeAssessmentSystemLoginTitle": "ফর্মাটিভ এসেসমেন্ট সিস্টেম এ লগইন করুন",
   "socialLearningPlatform": "সোস্যাল লার্নিং প্লাটফর্ম",
-  "socialLearningPlatformLoginTitle": "প্রবেশ করুন সোস্যাল লার্নিং প্লাটফর্ম",
+  "socialLearningPlatformLoginTitle": "সোশ্যাল লার্নিং প্লাটফর্ম  এ লগইন করুন",
   "howCanIHelpYou": "কিভাবে আমরা আপনাকে সাহায্য করতে পারি? আমাদের",
   "forMoreHelp": " দেখুন বা আরও সাহায্যের জন্য আমাদের",
   "fastStartGuide": "দ্রুত স্টার্ট গাইড",
