--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -9,7 +9,7 @@
   "registerHere": "Register",
   "welcomeToLms": "Welcome to HSEP Learning Management System",
   "learningManagementSystem": "Learning Management System LMS",
-  "learningManagementSystemLoginTitle": "Login to Learning Management System LMS",
+  "learningManagementSystemLoginTitle": "Login to Learning Management System",
   "eLibrary": "E-Library",
   "eLibraryLoginTitle": "Login to E-Library",
   "teachersGuide": "Teachers Guide",
