En Bn fixed for Delete Modal

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -93,5 +93,10 @@
   "supDocLimit": "5 MB এর কম",
   "updateCourse": "পাঠ্যক্রম আপডেট করুন",
   "update": " আপডেট করুন",
-  "profileImageLimit": "সর্বাধিক আকার 100KB"
+  "profileImageLimit": "সর্বাধিক আকার 100KB",
+  "warning":"সতর্কতা",
+  "message":"আপনি কি এটি স্থায়ীভাবে মুছে ফেলতে চান?",
+  "confirmation":"আইটেমটি স্থায়ী ভাবে মুছে যাবে এবং আপনি এগুলি আর ফিরিয়ে আনতে পারবেন না|",
+  "cancel":"বাতিল করুন",
+  "remove":"স্থায়ীভাবে মুছুন"
 }
