En Bn changes in admin userlist modal

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -98,5 +98,12 @@
   "message":"আপনি কি এটি স্থায়ীভাবে মুছে ফেলতে চান?",
   "confirmation":"আইটেমটি স্থায়ী ভাবে মুছে যাবে এবং আপনি এগুলি আর ফিরিয়ে আনতে পারবেন না|",
   "cancel":"বাতিল করুন",
-  "remove":"স্থায়ীভাবে মুছুন"
+  "remove":"স্থায়ীভাবে মুছুন",
+  "fullName":"ব্যবহারকারীর সম্পূর্ন নাম:",
+  "username":"ইউজার নেম:",
+  "emailAddress":"ইমেল এড্রেস:",
+  "mobileNumber":"মোবাইল নাম্বার:",
+  "roleName":"রোল নেম:"
+
+
 }
