Update course add and edit partition size

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -14,8 +14,8 @@
   "eLibraryLoginTitle": "Login to e-Library",
   "teachersGuide": "e-Teacher's Guide",
   "teachersGuideLoginTitle": "Login to e-Teacher's Guide",
-  "formativeAssesmentSystem": "Formative Assesment System",
-  "formativeAssessmentSystemLoginTitle": "Login to Formative Assesment System",
+  "formativeAssesmentSystem": "Formative Assessment System",
+  "formativeAssessmentSystemLoginTitle": "Login to Formative Assessment System",
   "socialLearningPlatform": "Social Learning Platform",
   "socialLearningPlatformLoginTitle": "Login to Social Learning Platform",
   "howCanIHelpYou": "How can we help you? See our",
@@ -50,7 +50,7 @@
   "batchCode": "Batch Code",
   "status": "Status",
   "actionButton": "Action Button",
-  "formativeAssessmentSystem": "Formative Assesment System",
+  "formativeAssessmentSystem": "Formative Assessment System",
   "userProfile": "User Profile",
   "fullName": "Full Name",
   "role": "Role",
@@ -89,8 +89,8 @@
   "icon": "Icon",
   "supportingDoc": "Supporting Documents",
   "remarks": "Remarks",
-  "featureImgLimit": "Feature image: 500X300 and less than 200KB, File upload size",
-  "iconLimit": "Icon image can be 300 X 300 and less than 100KB",
+  "featureImgLimit": "Feature image: 500x300 and less than 200KB, File upload size",
+  "iconLimit": "Icon image can be 300x300 and less than 100KB",
   "supDocLimit": "less than 5 MB",
   "updateCourse": "Update Course",
   "update": "Update",
@@ -106,9 +106,9 @@
   "mobileNumber":"Mobile number:",
   "roleName":"Role name:",
   "vdo": "Video",
-  "assigmnment": "Assigmnment",
+  "assigmnment": "Assignment",
   "vdoWithQuiz": "Video with quiz",
-  "assesment": "Assesment",
+  "assesment": "Assessment",
   "selectTopic": "Select Topic to add",
   "addChapter": "Add Chapter"
 }
