add topic button fixes

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -99,5 +99,6 @@
   "vdoWithQuiz": "ভিডিও উইথ কুইজ",
   "assesment": "এসেসমেন্ট",
   "selectTopic": "আপনার বিষয়ের ধরন নির্বাচন করুন",
-  "addChapter": "অধ্যায় যোগ করুন"
+  "addChapter": "অধ্যায় যোগ করুন",
+  "addTopic": "টপিক যোগ করুন"
 }
