--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -100,5 +100,6 @@
   "vdoWithQuiz": "Video with quiz",
   "assesment": "Assesment",
   "selectTopic": "Select Topic to add",
-  "addChapter": "Add Chapter"
+  "addChapter": "Add Chapter",
+  "addTopic": "Add Topic"
 }
