--- a/src/locale/english.json
+++ b/src/locale/english.json
@@ -55,7 +55,15 @@
     "name":"Name",
     "numberOfModule":"Number of Modules",
     "action":"Action",
-    "userCreation":"Create User"
+    "userCreation":"Create User",
+    "addAssesment":"Add Assesment",
+    "assesmentName":"Assesment Name",
+    "assesmentNo":"Assesment 1",
+    "markInput":"Enter Mark",
+    "passmarkInput":"Enter Pass Mark",
+    "negativeMarkInput":"Enter Negative Mark",
+    "enterTime":"Enter Time",
+    "placeHolderNumber":"1"
 
     
 }
