--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -110,5 +110,8 @@
   "vdoWithQuiz": "Video with quiz",
   "assesment": "Assessment",
   "selectTopic": "Select Topic to add",
-  "addChapter": "Add Chapter"
+  "addChapter": "Add Chapter",
+  "userList":"User list",
+  "addAssignment":"Add Assignment",
+  "assignmentname":"Enter the name of the assignment"
 }
