chapter list design modification, add update functionality, en bn changes , design change in create and edit course page

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -114,5 +114,14 @@
   "userList":"User list",
   "addAssignment":"Add Assignment",
   "assignmentname":"Enter the name of the assignment",
-  "addTopic": "Add Topic"
+  "addTopic": "Add Topic",
+  "assignmentInstruct":"Assignment Instructions",
+  "assignmentMark":"Mark the assignment",
+  "assignMarkPlace":"Enter assignment marks...",
+  "assignDuration":"Input the time",
+  "assignDurationPlace":"20 Minute",
+  "assignSubmissionType":"Submission type",
+  "assignCheckboxOne":"Written Submission",
+  "assignCheckboxTwo":"Upload File"
+
 }
