fixed course list page

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -97,33 +97,33 @@
   "updateCourse": "Update Course",
   "update": "Update",
   "profileImageLimit": "Maximum size 100KB",
-  "warning":"Warning",
-  "message":"Do you want to delete it permanently?",
-  "confirmation":"The item will be permanently deleted and you will not be able to retrieve it.",
-  "cancel":"Cancel",
-  "remove":"Delete",
-  "fullName":"Full name of the user:",
-  "username":"User name:",
-  "emailAddress":"Email address:",
-  "mobileNumber":"Mobile number:",
-  "roleName":"Role name:",
+  "warning": "Warning",
+  "message": "Do you want to delete it permanently?",
+  "confirmation": "The item will be permanently deleted and you will not be able to retrieve it.",
+  "cancel": "Cancel",
+  "remove": "Delete",
+  "fullName": "Full name of the user:",
+  "username": "User name:",
+  "emailAddress": "Email address:",
+  "mobileNumber": "Mobile number:",
+  "roleName": "Role name:",
   "vdo": "Video",
   "assigmnment": "Assignment",
   "vdoWithQuiz": "Video with quiz",
   "assesment": "Assessment",
   "selectTopic": "Select Topic to add",
   "addChapter": "Add Chapter",
-  "userList":"User list",
-  "addAssignment":"Add Assignment",
-  "assignmentname":"Enter the name of the assignment",
+  "userList": "User list",
+  "addAssignment": "Add Assignment",
+  "assignmentname": "Enter the name of the assignment",
   "addTopic": "Add Topic",
-  "assignmentInstruct":"Assignment Instructions",
-  "assignmentMark":"Mark the assignment",
-  "assignMarkPlace":"Enter assignment marks...",
-  "assignDuration":"Input the time",
-  "assignDurationPlace":"20 Minute",
-  "assignSubmissionType":"Submission type",
-  "assignCheckboxOne":"Written Submission",
-  "assignCheckboxTwo":"Upload File"
-
+  "assignmentInstruct": "Assignment Instructions",
+  "assignmentMark": "Mark the assignment",
+  "assignMarkPlace": "Enter assignment marks...",
+  "assignDuration": "Input the time",
+  "assignDurationPlace": "20 Minute",
+  "assignSubmissionType": "Submission type",
+  "assignCheckboxOne": "Written Submission",
+  "assignCheckboxTwo": "Upload File",
+  "nameAndCode": "Course Name : Code"
 }
