--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -96,32 +96,33 @@
   "updateCourse": "পাঠ্যক্রম আপডেট করুন",
   "update": " আপডেট করুন",
   "profileImageLimit": "সর্বাধিক আকার 100KB",
-  "warning":"সতর্কতা",
-  "message":"আপনি কি এটি স্থায়ীভাবে মুছে ফেলতে চান?",
-  "confirmation":"আইটেমটি স্থায়ী ভাবে মুছে যাবে এবং আপনি এগুলি আর ফিরিয়ে আনতে পারবেন না|",
-  "cancel":"বাতিল করুন",
-  "remove":"স্থায়ীভাবে মুছুন",
-  "fullName":"ব্যবহারকারীর সম্পূর্ন নাম:",
-  "username":"ইউজার নেম:",
-  "emailAddress":"ইমেল এড্রেস:",
-  "mobileNumber":"মোবাইল নাম্বার:",
-  "roleName":"রোল নেম:",
+  "warning": "সতর্কতা",
+  "message": "আপনি কি এটি স্থায়ীভাবে মুছে ফেলতে চান?",
+  "confirmation": "আইটেমটি স্থায়ী ভাবে মুছে যাবে এবং আপনি এগুলি আর ফিরিয়ে আনতে পারবেন না|",
+  "cancel": "বাতিল করুন",
+  "remove": "স্থায়ীভাবে মুছুন",
+  "fullName": "ব্যবহারকারীর সম্পূর্ন নাম:",
+  "username": "ইউজার নেম:",
+  "emailAddress": "ইমেল এড্রেস:",
+  "mobileNumber": "মোবাইল নাম্বার:",
+  "roleName": "রোল নেম:",
   "vdo": "ভিডিও",
   "assigmnment": "অ্যাসাইনমেন্ট",
   "vdoWithQuiz": "ভিডিও উইথ কুইজ",
   "assesment": "এসেসমেন্ট",
   "selectTopic": "আপনার বিষয়ের ধরন নির্বাচন করুন",
   "addChapter": "অধ্যায় যোগ করুন",
-  "userList":"ইউজার লিস্ট",
-  "addAssignment":"এসাইনমেন্ট যোগ করুন",
-  "assignmentname":"অ্যাসাইনমেন্টের নাম লিখুন",
+  "userList": "ইউজার লিস্ট",
+  "addAssignment": "এসাইনমেন্ট যোগ করুন",
+  "assignmentname": "অ্যাসাইনমেন্টের নাম লিখুন",
   "addTopic": "টপিক যোগ করুন",
-  "assignmentInstruct":"অ্যাসাইনমেন্টের নির্দেশাবলী",
-  "assignmentMark":"অ্যাসাইনমেন্টের মার্ক দিন",
-  "assignMarkPlace":"অ্যাসাইনমেন্টের মার্ক লিখুন...",
-  "assignDuration":"সময় ইনপুট দিন",
-  "assignDurationPlace":"২০ মিনিট",
-  "assignSubmissionType":"সাবমিশন টাইপ",
-  "assignCheckboxOne":"রিটেন সাবমিশন",
-  "assignCheckboxTwo":"আপলোড ফাইল"
+  "assignmentInstruct": "অ্যাসাইনমেন্টের নির্দেশাবলী",
+  "assignmentMark": "অ্যাসাইনমেন্টের মার্ক দিন",
+  "assignMarkPlace": "অ্যাসাইনমেন্টের মার্ক লিখুন...",
+  "assignDuration": "সময় ইনপুট দিন",
+  "assignDurationPlace": "২০ মিনিট",
+  "assignSubmissionType": "সাবমিশন টাইপ",
+  "assignCheckboxOne": "রিটেন সাবমিশন",
+  "assignCheckboxTwo": "আপলোড ফাইল",
+  "nameAndCode": "পাঠ্যক্রমের নাম : কোড"
 }
