En Bn fixed on button

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -77,7 +77,8 @@
     "or":"অথবা",
     "instructions":"নির্দেশনাবলী লিখুন",
     "mcqWithPhoto":"এমসিকিউ উইথ পিকচার যোগ করুন (কারবালা প্রান্তর)",
-    "quizDescription":"কুইজের বিবরণ"
+    "quizDescription":"কুইজের বিবরণ",
+    "addContent":"কনটেন্ট যোগ করুন"
 
 }
 
