--- a/src/locale/english.json
+++ b/src/locale/english.json
@@ -77,7 +77,8 @@
     "or":"Or",
     "instructions":"Enter the Instructions",
     "mcqWithPhoto":"Add Mcq With Photos",
-    "quizDescription":"Quiz Description"
+    "quizDescription":"Quiz Description",
+    "addContent":"Add Content"
     
     
 }
