--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -124,5 +124,6 @@
   "assignSubmissionType": "সাবমিশন টাইপ",
   "assignCheckboxOne": "রিটেন সাবমিশন",
   "assignCheckboxTwo": "আপলোড ফাইল",
-  "nameAndCode": "পাঠ্যক্রমের নাম : কোড"
+  "nameAndCode": "পাঠ্যক্রমের নাম : কোড",
+  "instruction":"নির্দেশনাবলী লিখুন:"
 }
