Add virtual keyboard on input field

--- a/src/locale/bn.json
+++ b/src/locale/bn.json
@@ -101,7 +101,7 @@
   "confirmation": "আইটেমটি স্থায়ী ভাবে মুছে যাবে এবং আপনি এগুলি আর ফিরিয়ে আনতে পারবেন না|",
   "cancel": "বাতিল করুন",
   "remove": "স্থায়ীভাবে মুছুন",
-  "fullName": "ব্যবহারকারীর সম্পূর্ন নাম:",
+  "userFullName": "ব্যবহারকারীর সম্পূর্ন নাম:",
   "username": "ইউজার নেম:",
   "emailAddress": "ইমেল এড্রেস:",
   "mobileNumber": "মোবাইল নাম্বার:",
@@ -119,6 +119,7 @@
   "assignmentInstruct": "অ্যাসাইনমেন্টের নির্দেশাবলী",
   "assignmentMark": "অ্যাসাইনমেন্টের মার্ক দিন",
   "assignMarkPlace": "অ্যাসাইনমেন্টের মার্ক লিখুন...",
+  "codePlace": "এখানে কোড লিখুন...",
   "assignDuration": "সময় ইনপুট দিন",
   "assignDurationPlace": "২০ মিনিট",
   "assignSubmissionType": "সাবমিশন টাইপ",
