--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -102,7 +102,7 @@
   "confirmation": "The item will be permanently deleted and you will not be able to retrieve it.",
   "cancel": "Cancel",
   "remove": "Delete",
-  "fullName": "Full name of the user:",
+  "userFullName": "Full name of the user:",
   "username": "User name:",
   "emailAddress": "Email address:",
   "mobileNumber": "Mobile number:",
@@ -120,6 +120,7 @@
   "assignmentInstruct": "Assignment Instructions",
   "assignmentMark": "Mark the assignment",
   "assignMarkPlace": "Enter assignment marks...",
+  "codePlace": "Write code here...",
   "assignDuration": "Input the time",
   "assignDurationPlace": "20 Minute",
   "assignSubmissionType": "Submission type",
