Update file info language

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -91,9 +91,9 @@
   "icon": "Icon",
   "supportingDoc": "Supporting Documents",
   "remarks": "Remarks",
-  "featureImgLimit": "Feature image: 500x300 and less than 200KB, File upload size",
-  "iconLimit": "Icon image can be 300x300 and less than 100KB",
-  "supDocLimit": "less than 5 MB",
+  "featureImgLimit": "Feature image size 500x300 and not more than 200KB",
+  "iconLimit": "Icon image size 300x300 and not more than 100KB",
+  "supDocLimit": "Not more than 5 MB",
   "updateCourse": "Update Course",
   "update": "Update",
   "profileImageLimit": "Maximum size 100KB",
