Sidebar hover effect and course list table header updated

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -53,7 +53,7 @@
     "id":"আইডি",
     "code":"কোড",
     "name":"নাম",
-    "numberOfModule":"মডিউল নাম্বার",
+    "numberOfModule":"মডিউল সংখ্যা",
     "action":"অ্যাকশন",
     "userCreation":"ক্রিয়েট ইউজার",
     "addAssesment":"এসেসমেন্ট যোগ করুন",
