Added video field and redio button functionality

--- a/src/locale/bangla.json
+++ b/src/locale/bangla.json
@@ -69,7 +69,7 @@
     "bulkUpload":"বাল্ক আপলোড",
     "written":"লিখিত",
     "photo":"ছবি সম্পর্কিত",
-    "quizType":"কুইজের প্রশ্নের ধরন:",
+    "quizType":"কুইজের প্রশ্নের ধরন",
     "alternative":"বিকল্প লিখুন",
     "addMore":"আরো যোগ করুন",
     "addInfo":"তথ্য যোগ করুন",
